--- a/src/main/webapp/app-code/user/feedback/feedback.view.html
+++ b/src/main/webapp/app-code/user/feedback/feedback.view.html
@@ -46,7 +46,7 @@
               </div>
               <div class="f-row">
                 <div class="full-width">
-                  <md-button type="submit" ng-if=vm.disable class="btn color medium full" >
+                  <md-button type="submit" ng-if="!vm.disable" class="btn color medium full" >
                     Inserisci
                   </md-button>
                 </div>
