--- a/src/main/webapp/app-code/user/personal_bacheca/prenotation_dialog.app.tmpl.html
+++ b/src/main/webapp/app-code/user/personal_bacheca/prenotation_dialog.app.tmpl.html
@@ -38,7 +38,7 @@
                 Annulla
             </md-button>
             <md-button type="submit">
-                Useful
+                Invia
             </md-button>
         </md-dialog-actions>
     </form>
