fix bug; gestita la pagina delle notifiche per mobile

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <!-- SERVERMOD  EasyMove-maven/-->
     <base href="/EasyMove-maven/"> 
     <!--<base href="/">-->
+    <title>EasyMove</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -92,6 +93,7 @@
     <script src="app-code/user/personal_profilo/personal_profilo.app.controller.js"></script>
     <script src="app-code/user/personal_prenotazioni/personal_prenotazioni.controller.js"></script>
     <script src="app-code/user/prenotation/prenotation.controller.js"></script>
+    <script src="app-code/user/prenotazione/prenotazione.controller.js"></script>
     <script src="app-code/user/search/search.controller.js"></script>
     <script src="app-code/user/offer1/offer1.controller.js"></script>
     <script src="app-code/user/offer2/offer2.controller.js"></script>
@@ -123,7 +125,9 @@
     <script src="app-code/altreComponenti/flashservice.app.directive.js"></script>
     <script src="app-code/altreComponenti/footer.app.directive.js"></script>
     <script src="app-code/altreComponenti/feedback.app.directive.js"></script>
-
+    <script src="app-code/altreComponenti/notification-desk.app.directive.js"></script>
+    <script src="app-code/altreComponenti/notification-mobile.app.directive.js"></script>
+    
 
   
 </body>
