init short travel

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,7 @@
     <script src="app-code/user/prenotation/prenotation.controller.js"></script>
     <script src="app-code/user/search/search.controller.js"></script>
     <script src="app-code/user/offer1/offer1.controller.js"></script>
+    <script src="app-code/user/offer_short/offer_short.controller.js"></script>
     <script src="app-code/user/offer2/offer2.controller.js"></script>
     <script src="app-code/user/profilo_utenti/profilo_utenti.controller.js"></script>
     <script src="app-code/user/visualizza_autobus/visualizza_autobus.controller.js"></script>
