aggiustato problema con revert

--- a/src/main/webapp/app-code/altreComponenti/navbar.app.view.html
+++ b/src/main/webapp/app-code/altreComponenti/navbar.app.view.html
@@ -19,6 +19,7 @@
 						<li id="headerBacheca" ng-if="vm.utente!=null"><a href="bacheca">Pagina personale</a></li>
 						<li id="headerSearch" ng-if="vm.utente!=null"><a href="search">Cerca</a></li>
 						<li id="headerOffer" ng-if="vm.utente!=null"><a href="offer1">Offri</a></li>
+						<li id="headerOffer" ng-if="vm.utente!=null"><a href="offershort">Offri un passaggio veloce</a></li>
 						<li id="headerRegister" ng-if="vm.utente==null"><a href="register">Registrazione</a></li>
 						<li id="headerLogout" ng-if="vm.utente!=null"><a ng-click="vm.logout()">Logout</a></li>
 					</ul>
