--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <base href="/EasyMove-maven/"> 
     <!--<base href="/">-->
         <meta charset="utf-8" />
+        <title>EasyMove</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
       <link rel="stylesheet" href="css/animate.css">
@@ -102,6 +103,7 @@
     <script src="app-code/user/visualizza_autobus_cambio/visualizza_autobus_cambio.controller.js"></script>
     <script src="app-code/user/visualizza_autobus_ibrido/visualizza_autobus_ibrido.controller.js"></script>
     <script src="app-code/user/check_email/check_email.controller.js"></script>
+    <script src="app-code/user/prenotazione/prenotazione.controller.js"></script>
     <script src="app-code/user/error/error.controller.js"></script>
     <script src="app-code/user/recupera_psw/recupera_psw.controller.js"></script>
     <script src="app-code/user/modifica_psw/modifica_psw.controller.js"></script>
@@ -125,7 +127,8 @@
     <script src="app-code/altreComponenti/flashservice.app.directive.js"></script>
     <script src="app-code/altreComponenti/footer.app.directive.js"></script>
     <script src="app-code/altreComponenti/feedback.app.directive.js"></script>
-
+<script src="app-code/altreComponenti/notification-mobile.app.directive.js"></script>
+    <script src="app-code/altreComponenti/notification-desk.app.directive.js"></script>
 
   
 </body>
